--- a/static/custom.css
+++ b/static/custom.css
@@ -11,7 +11,7 @@
 /* Light mode theming */
 :root,
 :root[color-theme="light"] {
-  --header-background: #666666;
+  --header-background: #515151;
   --header-font-color: #ffffff;
 
   --body-background: #ffffff;
@@ -20,7 +20,7 @@
   --mark-color: #ffab00;
 
   --button-background: #62cb97;
-  --button-border-color: #666666;
+  --button-border-color: #515151;
 
   --link-color: #518169;
   --link-color-visited: #c54e8a;
@@ -40,14 +40,14 @@
 
   --control-icons: #b2bac1;
 
-  --footer-background: #666666;
+  --footer-background: #515151;
   --footer-font-color: #ffffff;
   --footer-link-color: #ffffff;
   --footer-link-color-visited: #ffffff;
 }
 @media (prefers-color-scheme: light) {
   :root {
-    --header-background: #666666;
+    --header-background: #515151;
     --header-font-color: #ffffff;
 
     --body-background: #ffffff;
@@ -56,7 +56,7 @@
     --mark-color: #ffab00;
 
     --button-background: #62cb97;
-    --button-border-color: #666666;
+    --button-border-color: #515151;
 
     --link-color: #518169;
     --link-color-visited: #d74341;
@@ -76,7 +76,7 @@
 
     --control-icons: #b2bac1;
 
-    --footer-background: #666666;
+    --footer-background: #515151;
     --footer-font-color: #ffffff;
     --footer-link-color: #ffffff;
     --footer-link-color-visited: #ffffff;
@@ -85,16 +85,16 @@
 
 /* Dark mode theming */
 :root[color-theme="dark"] {
-  --header-background: #666666;
+  --header-background: #515151;
   --header-font-color: #ffffff;
 
-  --body-background: #343a40;
+  --body-background: #1d1e20;
   --body-font-color: #ced3d8;
 
   --mark-color: #ffab00;
 
   --button-background: #62cb97;
-  --button-border-color: #666666;
+  --button-border-color: #515151;
 
   --link-color: #d74341;
   --link-color-visited: #c27a9e;
@@ -104,7 +104,7 @@
   --code-accent-color-lite: #2b3035;
   --code-font-color: #b9b9b9;
 
-  --code-copy-background: #343a40;
+  --code-copy-background: #1d1e20;
   --code-copy-font-color: #6b7784;
   --code-copy-border-color: #6b7784;
   --code-copy-success-color: #37905c;
@@ -114,23 +114,23 @@
 
   --control-icons: #b2bac1;
 
-  --footer-background: #666666;
+  --footer-background: #515151;
   --footer-font-color: #ffffff;
   --footer-link-color: #ffffff;
   --footer-link-color-visited: #ffffff;
 }
 @media (prefers-color-scheme: dark) {
   :root {
-    --header-background: #666666;
+    --header-background: #515151;
     --header-font-color: #ffffff;
 
-    --body-background: #343a40;
+    --body-background: #1d1e20;
     --body-font-color: #ced3d8;
 
     --mark-color: #ffab00;
 
     --button-background: #62cb97;
-    --button-border-color: #666666;
+    --button-border-color: #515151;
 
     --link-color: #d74341;
     --link-color-visited: #c27a9e;
@@ -150,7 +150,7 @@
 
     --control-icons: #b2bac1;
 
-    --footer-background: #666666;
+    --footer-background: #515151;
     --footer-font-color: #ffffff;
     --footer-link-color: #ffffff;
     --footer-link-color-visited: #ffffff;
