--- a/static/custom.css
+++ b/static/custom.css
@@ -11,7 +11,7 @@
 /* Light mode theming */
 :root,
 :root[color-theme="light"] {
-  --header-background: #515151;
+  --header-background: #303030;
   --header-font-color: #ffffff;
 
   --body-background: #ffffff;
@@ -40,14 +40,14 @@
 
   --control-icons: #b2bac1;
 
-  --footer-background: #515151;
+  --footer-background: #303030;
   --footer-font-color: #ffffff;
   --footer-link-color: #ffffff;
   --footer-link-color-visited: #ffffff;
 }
 @media (prefers-color-scheme: light) {
   :root {
-    --header-background: #515151;
+    --header-background: #303030;
     --header-font-color: #ffffff;
 
     --body-background: #ffffff;
@@ -76,7 +76,7 @@
 
     --control-icons: #b2bac1;
 
-    --footer-background: #515151;
+    --footer-background: #303030;
     --footer-font-color: #ffffff;
     --footer-link-color: #ffffff;
     --footer-link-color-visited: #ffffff;
@@ -85,10 +85,10 @@
 
 /* Dark mode theming */
 :root[color-theme="dark"] {
-  --header-background: #515151;
+  --header-background: #303030;
   --header-font-color: #ffffff;
 
-  --body-background: #1d1e20;
+  --body-background: #424242;
   --body-font-color: #ced3d8;
 
   --mark-color: #ffab00;
@@ -114,17 +114,17 @@
 
   --control-icons: #b2bac1;
 
-  --footer-background: #515151;
+  --footer-background: #303030;
   --footer-font-color: #ffffff;
   --footer-link-color: #ffffff;
   --footer-link-color-visited: #ffffff;
 }
 @media (prefers-color-scheme: dark) {
   :root {
-    --header-background: #515151;
+    --header-background: #303030;
     --header-font-color: #ffffff;
 
-    --body-background: #1d1e20;
+    --body-background: #424242;
     --body-font-color: #ced3d8;
 
     --mark-color: #ffab00;
@@ -150,7 +150,7 @@
 
     --control-icons: #b2bac1;
 
-    --footer-background: #515151;
+    --footer-background: #303030;
     --footer-font-color: #ffffff;
     --footer-link-color: #ffffff;
     --footer-link-color-visited: #ffffff;
