--- a/static/custom.css
+++ b/static/custom.css
@@ -12,9 +12,9 @@
 :root,
 :root[color-theme="light"] {
   --header-background: #303030;
-  --header-font-color: #ffffff;
+  --header-font-color: #fefefe;
 
-  --body-background: #ffffff;
+  --body-background: #fefefe;
   --body-font-color: #343a40;
 
   --mark-color: #ffab00;
@@ -41,16 +41,16 @@
   --control-icons: #b2bac1;
 
   --footer-background: #303030;
-  --footer-font-color: #ffffff;
-  --footer-link-color: #ffffff;
-  --footer-link-color-visited: #ffffff;
+  --footer-font-color: #fefefe;
+  --footer-link-color: #fefefe;
+  --footer-link-color-visited: #fefefe;
 }
 @media (prefers-color-scheme: light) {
   :root {
     --header-background: #303030;
-    --header-font-color: #ffffff;
+    --header-font-color: #fefefe;
 
-    --body-background: #ffffff;
+    --body-background: #fefefe;
     --body-font-color: #343a40;
 
     --mark-color: #ffab00;
@@ -77,19 +77,19 @@
     --control-icons: #b2bac1;
 
     --footer-background: #303030;
-    --footer-font-color: #ffffff;
-    --footer-link-color: #ffffff;
-    --footer-link-color-visited: #ffffff;
+    --footer-font-color: #fefefe;
+    --footer-link-color: #fefefe;
+    --footer-link-color-visited: #fefefe;
   }
 }
 
 /* Dark mode theming */
 :root[color-theme="dark"] {
-  --header-background: #303030;
-  --header-font-color: #ffffff;
+  --header-background: #1e282d;
+  --header-font-color: #fefefe;
 
-  --body-background: #424242;
-  --body-font-color: #ced3d8;
+  --body-background: #1e282d;
+  --body-font-color: #fefefe;
 
   --mark-color: #ffab00;
 
@@ -114,18 +114,18 @@
 
   --control-icons: #b2bac1;
 
-  --footer-background: #303030;
-  --footer-font-color: #ffffff;
-  --footer-link-color: #ffffff;
-  --footer-link-color-visited: #ffffff;
+  --footer-background: #1e282d;
+  --footer-font-color: #fefefe;
+  --footer-link-color: #fefefe;
+  --footer-link-color-visited: #fefefe;
 }
 @media (prefers-color-scheme: dark) {
   :root {
-    --header-background: #303030;
+    --header-background: #1e282d;
     --header-font-color: #ffffff;
 
-    --body-background: #424242;
-    --body-font-color: #ced3d8;
+    --body-background: #1e282d;
+    --body-font-color: #fefefe;
 
     --mark-color: #ffab00;
 
@@ -150,10 +150,10 @@
 
     --control-icons: #b2bac1;
 
-    --footer-background: #303030;
-    --footer-font-color: #ffffff;
-    --footer-link-color: #ffffff;
-    --footer-link-color-visited: #ffffff;
+    --footer-background: #1e282d;
+    --footer-font-color: #fefefe;
+    --footer-link-color: #fefefe;
+    --footer-link-color-visited: #fefefe;
   }
 }
 
