--- a/static/custom.css
+++ b/static/custom.css
@@ -59,7 +59,7 @@
     --button-border-color: #515151;
 
     --link-color: #518169;
-    --link-color-visited: #d74341;
+    --link-color-visited: #c54e8a;
 
     --code-background: #f5f6f8;
     --code-accent-color: #e3e7eb;
